# preco

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  _typos.toml  pyproject.toml
.github/workflows/: ci.yml
crates/identify/: Cargo.toml  convert_mapping.py
crates/identify/src/: mappings.rs
crates/preco/: Cargo.toml
crates/preco/src/: checkout.rs  commando.rs  dirs.rs  file_matching.rs  file_set.rs  helpers.rs  logging.rs  main.rs  regex_cache.rs
crates/preco/src/cfg/: mod.rs  parsing.rs  pre_commit_config.rs  pre_commit_hooks.rs
crates/preco/src/commands/: install.rs  run.rs
crates/preco/src/git/: files.rs
crates/preco/src/run_hook/: configured_hook.rs  helpers.rs  mod.rs  node.rs  python.rs
