[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
homepage = "https://pypi.org/project/preco/"
documentation = "https://pypi.org/project/preco/"
repository = "https://github.com/akx/preco"
authors = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0.79" }
clap = { version = "4.4.13" }
clap_complete_command = { version = "0.5.1" }
directories = { version = "5.0.1" }
futures = { version = "0.3.30" }
git2 = { version = "0.18.2" }
once_cell = { version = "1.19.0" }
regex = { version = "1.10.3" }
rustc-hash = { version = "1.1.0" }
serde = { version = "1.0.194" }
serde_yaml = { version = "0.9.32" }
shell-words = { version = "1.1.0" }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = { version = "0.3.0" }

[profile.profiling]
inherits = "release"
debug = true
